Fix wrong conditional statement in dtrace_debug_output

Reported in PR kern/48547 by ozaki-r.